--- a/cn.xsdzq.platfrom/src/main/resources/jdbc.properties
+++ b/cn.xsdzq.platfrom/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.driverClassName=oracle.jdbc.driver.OracleDriver 
-jdbc.url=jdbc:oracle:thin:@localhost:1521:orcl 
-jdbc.username=system 
-jdbc.password=12345678
+jdbc.driverClassName=com.mysql.jdbc.Driver 
+jdbc.url=jdbc:mysql://localhost:3306/bzzx
+jdbc.username=root
+jdbc.password=
