--- a/cn.xsdzq.platfrom/pom.xml
+++ b/cn.xsdzq.platfrom/pom.xml
@@ -17,6 +17,7 @@
 		<swagger-springmvc.version>1.0.2</swagger-springmvc.version>
 	</properties>
 	<dependencies>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -189,6 +190,12 @@
 					<artifactId>jboss-logging</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger2</artifactId>
+		    <version>2.9.2</version>
 		</dependency>
 
 		<dependency>
